welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:15: error: Boolean does not take parameters
    else (getCouleurSol()!=Color.green){
                                       ^